gumiho-mudang-scope/scope-core/tests/snapshots/malformed_sources/ruby__truncated-mid-method.snap
---
source: gumiho-mudang-scope/scope-core/tests/malformed_sources.rs
expression: snapshot_data
---
[
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 1,
        end_line: 14,
    },
]
